--- a/src/govuk/components/notification-banner/template.njk
+++ b/src/govuk/components/notification-banner/template.njk
@@ -6,7 +6,7 @@
   {% set typeClass = "govuk-notification-banner--" + params.type %}
 {% endif %}
 
-{% if 'role' in params %}
+{% if params.role %}
   {% set role = params.role %}
 {% elif successOrError %}
   {# If type is success or error, add `role="alert"` to prioritise the information in the notification banner to users of assistive technologies #}
@@ -17,17 +17,15 @@
 {% endif %}
 
 {# Check whether to add `data-initial-focus="true"` which focuses the notification banner on page load #}
-{% if 'initialFocus' in params %}
+{% if params.initialFocus is defined %}
   {% set initialFocus = params.initialFocus %}
 {% elif successOrError %}
   {% set initialFocus = true %}
-{% else %}
-  {% set initialFocus = false %}
 {% endif %}
 
-{% if 'tabindex' in params %}
+{% if params.tabindex is defined %}
   {% set tabindex = params.tabindex %}
-{# Check that success or error banner should be focused on page load #}
+{# Make sure that success or error banner should be focused on page load #}
 {% elif successOrError and initialFocus %}
   {# Make the notification banner focusable #}
   {% set tabindex = "-1" %}
@@ -46,7 +44,7 @@
 {%- endif -%}
 
 <div class="govuk-notification-banner {{ typeClass }} {%- if params.classes %} {{ params.classes }}{% endif -%}" role="{{ role }}"
-  {%- if tabindex !== false %} tabindex="{{ tabindex }}" {% endif %}
+  {%- if tabindex or tabindex === 0 %} tabindex="{{ tabindex }}" {% endif %}
   {%- if (role == "region") %} aria-labelledby="{{ params.titleId | default('govuk-notification-banner-title') }}" {%- endif -%}
   {%- if initialFocus -%} data-initial-focus="true"{% endif %}
   {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
