--- a/app/views/full-page-examples/announcements/index.njk
+++ b/app/views/full-page-examples/announcements/index.njk
@@ -16,7 +16,7 @@ notes: Based on https://www.gov.uk/government/news/strictly-vampires-and-sausage
   navigation: [
     {
       href: "#1",
-      text: "Departments"
+      text: "Depts"
     },
     {
       href: "#2",
