--- a/src/govuk/components/notification-banner/template.njk
+++ b/src/govuk/components/notification-banner/template.njk
@@ -16,17 +16,17 @@
   {% set role = "region" %}
 {% endif %}
 
-{# Check whether to add `data-initial-focus="true"` which focuses the notification banner on page load #}
-{% if params.initialFocus is defined %}
-  {% set initialFocus = params.initialFocus %}
+{# Check whether to add `data-auto-focus="true"` which focuses the notification banner on page load #}
+{% if params.autoFocus is defined %}
+  {% set autoFocus = params.autoFocus %}
 {% elif successOrError %}
-  {% set initialFocus = true %}
+  {% set autoFocus = true %}
 {% endif %}
 
 {% if params.tabindex is defined %}
   {% set tabindex = params.tabindex %}
 {# Make sure that success or error banner should be focused on page load #}
-{% elif successOrError and initialFocus %}
+{% elif successOrError and autoFocus %}
   {# Make the notification banner focusable #}
   {% set tabindex = "-1" %}
 {% endif %}
@@ -47,7 +47,7 @@
   {%- if tabindex or tabindex === 0 %} tabindex="{{ tabindex }}" {% endif %}
   {%- if (role == "region") %} aria-labelledby="{{ params.titleId | default('govuk-notification-banner-title') }}" {%- endif -%}
   data-module="govuk-notification-banner"
-  {%- if initialFocus -%} data-initial-focus="true"{% endif %}
+  {%- if autoFocus -%} data-auto-focus="true"{% endif %}
   {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
   <div class="govuk-notification-banner__header">
     <h{{ params.titleHeadingLevel | default(2) }} class="govuk-notification-banner__title"{% if (role == "region" or params.titleId) %} id="{{ params.titleId | default('govuk-notification-banner-title') }}" {%- endif %}>
