--- a/src/govuk/settings/_typography-font.scss
+++ b/src/govuk/settings/_typography-font.scss
@@ -52,7 +52,8 @@ $govuk-font-family-tabular: if(
 
 /// Font families to use for print media
 ///
-/// This option avoids font-related issues that occur with some printer drivers and operating systems.
+/// We recommend that you use system fonts when printing. This will avoid issues
+/// with some printer drivers and operating systems.
 ///
 /// @type List
 /// @access public
