--- a/src/govuk/components/notification-banner/template.njk
+++ b/src/govuk/components/notification-banner/template.njk
@@ -1,15 +1,15 @@
-{%- if params.type == "success" or params.type == "error" %}
-  {% set successOrError = true %}
+{%- if params.type == "success" %}
+  {% set successBanner = true %}
 {% endif %}
 
-{%- if successOrError %}
+{%- if successBanner %}
   {% set typeClass = "govuk-notification-banner--" + params.type %}
 {% endif %}
 
 {% if params.role %}
   {% set role = params.role %}
-{% elif successOrError %}
-  {# If type is success or error, add `role="alert"` to prioritise the information in the notification banner to users of assistive technologies #}
+{% elif successBanner %}
+  {# If type is success, add `role="alert"` to prioritise the information in the notification banner to users of assistive technologies #}
   {% set role = "alert" %}
 {% else %}
   {# Otherwise add `role="region"` to make the notification banner a landmark to help users of assistive technologies to navigate to the banner #}
@@ -20,10 +20,8 @@
   {% set title = params.titleHtml | safe %}
 {%- elif params.titleText %}
   {% set title = params.titleText %}
-{%- elif params.type == "success" %}
+{%- elif successBanner %}
   {% set title = "Success" %}
-{%- elif params.type == "error" %}
-  {% set title = "Error" %}
 {%- else %}
   {% set title = "Important" %}
 {%- endif -%}
