--- a/src/govuk/components/notification-banner/_index.scss
+++ b/src/govuk/components/notification-banner/_index.scss
@@ -34,13 +34,14 @@
   }
 
   .govuk-notification-banner__content {
+    $padding-tablet: govuk-spacing(4);
     @include govuk-text-colour;
     padding: govuk-spacing(3);
 
     background-color: $govuk-body-background-colour;
 
     @include govuk-media-query($from: tablet) {
-      padding: govuk-spacing(4);
+      padding: $padding-tablet;
     }
 
     // Wrap content at the same place that a 2/3 grid column ends, to maintain
@@ -53,8 +54,8 @@
       // Calculate the internal width of a two-thirds column...
       $two-col-width: ($govuk-page-width * 2 / 3) - ($govuk-gutter * 1 / 3);
 
-      // ...and then take the border width and internal padding into account
-      $banner-exterior: (govuk-spacing(4) + $govuk-border-width);
+      // ...and then factor in the left border and padding
+      $banner-exterior: ($padding-tablet + $govuk-border-width);
       max-width: $two-col-width - $banner-exterior;
     }
 
