Rename notification banner full page example
This example originally used an error notification banner, but this style of banner was removed as we could not find a realistic use case.
We switched the example to use the success type notification banner when we did the release, but forgot to rename the files

--- a/app/views/full-page-examples/upload-your-photo-success/index.njk
+++ b/app/views/full-page-examples/upload-your-photo-success/index.njk
@@ -42,7 +42,7 @@ scenario: >-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <form method="post" novalidate>
-            {% if isError %}
+            {% if isSuccess %}
                 {{ govukNotificationBanner({
                 "type": "success",
                 "html": "<p class=\"govuk-notification-banner__heading\">Success, your photo has been uploaded</p>\n"
