--- a/app/views/examples/links/index.njk
+++ b/app/views/examples/links/index.njk
@@ -1,4 +1,5 @@
 {% from "back-link/macro.njk" import govukBackLink %}
+{% from "button/macro.njk" import govukButton %}
 
 {% extends "layout.njk" %}
 
@@ -57,6 +58,21 @@
       {% endfor %}
       </section>
     {% endfor %}
+
+      <section class="govuk-!-margin-top-8">
+        <h2 class="govuk-heading-l">Aligned with buttons</h2>
+
+        {{ govukButton({
+          "text": "Accept all cookies"
+        }) }}
+
+        {{ govukButton({
+          "text": "Reject all cookies"
+        }) }}
+
+        <a href="/#{{ randomPageHash }}" class="govuk-link govuk-link--align-button">
+          Set cookie preferences
+        </a>
 
     </div>
   </div>
