Add block in template for cookie banner

--- a/app/views/layouts/component-preview.njk
+++ b/app/views/layouts/component-preview.njk
@@ -6,6 +6,8 @@
 
 {% block skipLink %}{% endblock %}
 
+{% block cookieBanner %}{% endblock %}
+
 {% block header %}{% endblock %}
 
 {% block content %}
