--- a/app/views/layouts/index.njk
+++ b/app/views/layouts/index.njk
@@ -1,5 +1,7 @@
 {% extends "layout.njk" %}
 
+{% block cookieBanner %}{% endblock %}
+
 {% block content %}
   <h1 class="govuk-heading-xl">
     GOV.UK Frontend
