--- a/app/views/layouts/component.njk
+++ b/app/views/layouts/component.njk
@@ -14,6 +14,9 @@
   {% include componentName +"/"+ componentName +".njk" ignore missing %}
 {% endset %}
 
+// Turn off cookie banner
+{% block cookieBanner %}{% endblock %}
+
 {% block beforeContent %}
   {{ govukBreadcrumbs({
     "items": [
