Allow hidden examples to be viewed in review app
Exclude hidden examples from the list of examples shown for each component, whilst still making their data available to the review app so that they can be viewed if you know the URL.

This allows us to write JavaScript tests (which rely on examples in the review app) that target ‘edge cases’ without having to make the examples ‘visible’ in the review app.

--- a/app/views/macros/showExamples.njk
+++ b/app/views/macros/showExamples.njk
@@ -2,7 +2,7 @@
 
 {% macro showExamples(componentSlug, componentName, data, legacyQuery) %}
 
-{% for example in data.examples %}
+{% for example in data.examples | rejectattr('hidden') %}
   {% set exampleSlug = (example.name | replace(" ", "-")) %}
   {% set iframePathQuery = legacyQuery + '&iframe=true' if legacyQuery != '' else '?iframe=true' %}
 
