Add two separate cookie components

--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -7,6 +7,8 @@
 @import "checkboxes/index";
 @import "character-count/index";
 @import "cookie-banner/index";
+@import "cookie-banner-question/index";
+@import "cookie-banner-confirmation/index";
 @import "summary-list/index";
 @import "date-input/index";
 @import "details/index";
