--- a/app/views/layouts/legacy.njk
+++ b/app/views/layouts/legacy.njk
@@ -1,6 +1,6 @@
-{% extends "govuk_template_jinja/views/layouts/moaland_template.html" %}
+{% extends "govuk_template_jinja/views/layouts/govuk_template.html" %}
 
-{% set asset_path = "/vendor/moaland_template/" %}
+{% set asset_path = "/vendor/govuk_template/" %}
 {% set homepage_url = "/" %}
 {% block page_title %}{{ "Error: " if errors }}{{ page_title }} - GOV.MOA{% endblock %}
 
