--- a/package/moaland/components/footer/_index.scss
+++ b/package/moaland/components/footer/_index.scss
@@ -63,7 +63,7 @@
     // alphagov/govuk_template includes a specific a:link:focus selector
     // designed to make unvisited links a slightly darker blue when focussed, so
     // we need to override the text colour for that combination of selectors.
-    @include moaland-compatibility(moaland_template) {
+    @include moaland-compatibility(govuk_template) {
       &:link:focus {
         @include moaland-text-colour;
       }
