--- a/package/moaland/helpers/_links.scss
+++ b/package/moaland/helpers/_links.scss
@@ -59,7 +59,7 @@
   // we need to override the text colour for that combination of selectors so
   // so that unvisited links styled as buttons do not end up with dark blue
   // text when focussed.
-  @include moaland-compatibility(moaland_template) {
+  @include moaland-compatibility(govuk_template) {
     &:link:focus {
       color: $moaland-focus-text-colour;
     }
@@ -106,7 +106,7 @@
   // we need to override the text colour for that combination of selectors so
   // so that unvisited links styled as buttons do not end up with dark blue
   // text when focussed.
-  @include moaland-compatibility(moaland_template) {
+  @include moaland-compatibility(govuk_template) {
     &:link:focus {
       color: $moaland-focus-text-colour;
     }
@@ -153,7 +153,7 @@
   // we need to override the text colour for that combination of selectors so
   // so that unvisited links styled as buttons do not end up with dark blue
   // text when focussed.
-  @include moaland-compatibility(moaland_template) {
+  @include moaland-compatibility(govuk_template) {
     &:link:focus {
       color: $moaland-focus-text-colour;
     }
@@ -193,7 +193,7 @@
   // alphagov/govuk_template includes a specific a:link:focus selector designed
   // to make unvisited links a slightly darker blue when focussed, so we need to
   // override the text colour for that combination of selectors.
-  @include moaland-compatibility(moaland_template) {
+  @include moaland-compatibility(govuk_template) {
     &:link:focus {
       @include moaland-text-colour;
     }
@@ -229,7 +229,7 @@
   // alphagov/govuk_template includes a specific a:link:focus selector designed
   // to make unvisited links a slightly darker blue when focussed, so we need to
   // override the text colour for that combination of selectors.
-  @include moaland-compatibility(moaland_template) {
+  @include moaland-compatibility(govuk_template) {
     &:link:focus {
       @include moaland-text-colour;
     }
