--- a/package/moaland/settings/_compatibility.scss
+++ b/package/moaland/settings/_compatibility.scss
@@ -2,8 +2,8 @@
 /// 'Compatibility Mode'
 ///
 /// Enabling these flags improves compatibility if you are using GOV.MOA Frontend
-/// in an application that also uses moaland_elements, govuk_frontend_toolkit or
-/// moaland_template (the 'legacy repos').
+/// in an application that also uses govuk_elements, govuk_frontend_toolkit or
+/// govuk_template (the 'legacy repos').
 ///
 /// Enabling any of these settings will, by default:
 ///
@@ -24,7 +24,7 @@
 /// @type Boolean
 /// @access public
 
-$moaland-compatibility-moalandfrontendtoolkit: false !default;
+$moaland-compatibility-govukfrontendtoolkit: false !default;
 
 /// Compatibility Mode: alphagov/govuk_template
 ///
@@ -42,7 +42,7 @@ $moaland-compatibility-moalandfrontendtoolkit: false !default;
 /// @type Boolean
 /// @access public
 
-$moaland-compatibility-moalandtemplate: false !default;
+$moaland-compatibility-govuktemplate: false !default;
 
 /// Compatibility Mode: alphagov/govuk_elements
 ///
@@ -57,7 +57,7 @@ $moaland-compatibility-moalandtemplate: false !default;
 /// @type Boolean
 /// @access public
 
-$moaland-compatibility-moalandelements: false !default;
+$moaland-compatibility-govukelements: false !default;
 
 /// Compatibility Product Map
 ///
@@ -68,7 +68,7 @@ $moaland-compatibility-moalandelements: false !default;
 /// @access private
 
 $_moaland-compatibility: (
-  govuk_frontend_toolkit: $moaland-compatibility-moalandfrontendtoolkit,
-  moaland_template: $moaland-compatibility-moalandtemplate,
-  moaland_elements: $moaland-compatibility-moalandelements,
+  govuk_frontend_toolkit: $moaland-compatibility-govukfrontendtoolkit,
+  govuk_template: $moaland-compatibility-govuktemplate,
+  govuk_elements: $moaland-compatibility-govukelements,
 );
