--- a/src/govuk/core/_section-break.scss
+++ b/src/govuk/core/_section-break.scss
@@ -12,7 +12,7 @@
 
     // fix double-width section break and forced visible section break
     // when combined with styles from alphagov/elements
-    @include moaland-compatibility(moaland_elements) {
+    @include moaland-compatibility(govuk_elements) {
       height: 0;
     }
   }
