--- a/src/govuk/components/cookie-banner-generic/template.njk
+++ b/src/govuk/components/cookie-banner-generic/template.njk
@@ -1,9 +1,9 @@
 {% from "../button/macro.njk" import govukButton -%}
 
-<div class="govuk-cookie-banner-generic" data-module="govuk-cookie-banner-generic">
+<div class="govuk-cookie-banner-generic" data-module="govuk-cookie-banner-generic" role="region" aria-label="{{ params.ariaLabel or "Cookie banner" }}">
   {% for banner in params.banners %}
-     <div class="govuk-width-container {% if banner.hidden %}govuk-visually-hidden{% endif %}" {% for attribute, value in banner.attributes %} {{attribute}}="{{value}}"{% endfor %}>
-        {% if banner.title %}<h2>{{ banner.title }}</h2>{% endif %}
+     <div class="govuk-width-container" {% if banner.hidden %}style="display:none;"{% endif %} {% for attribute, value in banner.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+        {% if banner.title %}<h2 id="govuk-cookie-banner-generic__heading">{{ banner.title }}</h2>{% endif %}
 
         {% if banner.html %}
           {{ banner.html | safe }}
