--- a/src/govuk/components/header/template.njk
+++ b/src/govuk/components/header/template.njk
@@ -33,9 +33,9 @@
 
             The <image> element is a valid SVG element. In SVG, you would specify
             the URL of the image file with the xlink:href – as we don't reference an
-            image it has no effect. It's important to include the empty xlink:href
-            attribute as this prevents versions of IE which support SVG from
-            downloading the fallback image when they don't need to.
+            image it has no effect. It's important to include an empty data URI
+            as the xlink:href attribute as this prevents versions of IE which
+            support SVG from downloading the fallback image when they don't need to.
 
             In other browsers <image> is synonymous for the <img> tag and will be
             interpreted as such, displaying the fallback image. #}
