--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -5,6 +5,7 @@
 @import "breadcrumbs/index";
 @import "button/index";
 @import "checkboxes/index";
+@import "cookie-banner/index";
 @import "character-count/index";
 @import "summary-list/index";
 @import "date-input/index";
