[TEST] Explicitly set display: block

--- a/src/govuk/components/cookie-banner/_index.scss
+++ b/src/govuk/components/cookie-banner/_index.scss
@@ -23,6 +23,10 @@
     display: none;
   }
 
+  .govuk-cookie-banner:not([hidden]) {
+    display: block;
+  }
+
   .govuk-cookie-banner__message {
     // Remove the extra height added by the separator border.
     margin-bottom: -$border-bottom-width;
