--- a/src/govuk/components/fieldset/_index.scss
+++ b/src/govuk/components/fieldset/_index.scss
@@ -35,22 +35,22 @@
   // Modifiers that make legends look more like their equivalent headings
 
   .govuk-fieldset__legend--xl {
-    @include govuk-font($size: 48, $weight: bold);
+    @include govuk-font($size: xl, $weight: bold);
     margin-bottom: govuk-spacing(3);
   }
 
   .govuk-fieldset__legend--l {
-    @include govuk-font($size: 36, $weight: bold);
+    @include govuk-font($size: l, $weight: bold);
     margin-bottom: govuk-spacing(3);
   }
 
   .govuk-fieldset__legend--m {
-    @include govuk-font($size: 24, $weight: bold);
+    @include govuk-font($size: m, $weight: bold);
     margin-bottom: govuk-spacing(3);
   }
 
   .govuk-fieldset__legend--s {
-    @include govuk-font($size: 19, $weight: bold);
+    @include govuk-font($size: s, $weight: bold);
   }
 
   // When the legend contains an H1, we want the H1 to inherit all styles from
