--- a/src/govuk/components/table/_index.scss
+++ b/src/govuk/components/table/_index.scss
@@ -51,21 +51,21 @@
   // Modifiers that make captions look more like their equivalent headings
 
   .govuk-table__caption--xl {
-    @include govuk-font($size: 48, $weight: bold);
+    @include govuk-font($size: xl, $weight: bold);
     margin-bottom: govuk-spacing(3);
   }
 
   .govuk-table__caption--l {
-    @include govuk-font($size: 36, $weight: bold);
+    @include govuk-font($size: l, $weight: bold);
     margin-bottom: govuk-spacing(3);
   }
 
   .govuk-table__caption--m {
-    @include govuk-font($size: 24, $weight: bold);
+    @include govuk-font($size: m, $weight: bold);
     margin-bottom: govuk-spacing(3);
   }
 
   .govuk-table__caption--s {
-    @include govuk-font($size: 19, $weight: bold);
+    @include govuk-font($size: s, $weight: bold);
   }
 }
