--- a/govuk/components/warning-text/_index.scss
+++ b/govuk/components/warning-text/_index.scss
@@ -46,6 +46,16 @@
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
+
+    // Improve rendering in Windows High Contrast Mode (Edge), where a
+    // readability backplate behind the exclamation mark obscures the circle
+    forced-color-adjust: none;
+
+    @media screen and (forced-colors: active) {
+      border-color: windowText;
+      color: windowText;
+      background: transparent;
+    }
   }
 
   .govuk-warning-text__text {
