Get CSS working

--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -15,6 +15,7 @@
 @import "fieldset/index";
 @import "file-upload/index";
 @import "footer/index";
+@import "hide-this-page/index";
 @import "hint/index";
 @import "header/index";
 @import "input/index";
