--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -77,7 +77,7 @@
       top: 0;
       left: 0;
       width: 100vw;
-      background: govuk-colour("light-grey");
+      // background: govuk-colour("light-grey");
     }
 
     .govuk-quick-exit__sizing {
